# ChatBI

./: .coverage  .env  .gitignore  AI_AGENT_OPTIMIZATION_REPORT.md  API_MISMATCH_ANALYSIS.md  BACKEND_FIXES.md  CODE_REVIEW.md  CONTRIBUTING.md  CORS问题解决方案.md  Dump20251005.sql  ENV_CONFIG_GUIDE.md  EXECUTIVE_TECHNICAL_REVIEW.md  GITHUB_UPLOAD_GUIDE.md  LOGIN_REGISTER_UPDATE_REPORT.md  NEXT_STEPS.md  OPTIMIZATION_ROADMAP.md  OPTIMIZED_VERSION.md  OUTPUT_FLOW_AUDIT_REPORT.md  OUTPUT_FLOW_AUDIT_REPORT_PART2.md  OUTPUT_FLOW_AUDIT_SUMMARY.md  OUTPUT_FLOW_ISSUES_TRACKER.md  P0_COMPLETION_REPORT.md  P0_FINAL_VERIFICATION.md  P0_FIXES_COMPLETED.md  P0_FIXES_COMPLETED_FINAL.md  P0_SUCCESS_REPORT.md  P1_COMPLETION_FINAL.md  P1_COMPLETION_REPORT.md  P1_PROGRESS_REPORT.md  P1_USAGE_GUIDE.md  PDMshema.sql  PRIORITY_FIXES.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  README_CLEANUP.md  SCHEMA_ANALYSIS_REPORT.md  SETTINGS_VALIDATION_TEST_GUIDE.md  SETUP_GUIDE.md  TECHNICAL_DEBT_FINAL.md  (+38 more)
backend/: .dockerignore  .env  .env.example  .env.test  .gitignore  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAM.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  add_temperature_column.sql  app.py  auth.py  config.py  coverage.xml  database_init.sql  debug_logger.py  generate_keys.py  impact_analysis.md  lineage.mmd  logging_config.py  main.py  main_simplified.py  metadata.json  pyproject.toml  pytest.ini  requirements-simple.txt  requirements.txt  reset_admin.py  run_migration.py  startup_log.txt  test_output.txt
backend/agent/: __init__.py  graph.py  memory.py  prompts.py  schemas.py  state.py  tools.py
backend/core/: database.py  db_adapter.py  security.py
backend/models/: __init__.py  base.py  chat.py  db_connection.py  llm_config.py  system_prompt.py  user.py
backend/routes/: __init__.py  auth.py  chat.py  connections.py  llm_configs.py  profile.py  speech.py
backend/scripts/: add_chat_indexes.py  analyze_sql.py  generate_schema_context.py  profile_agent.py  restore_tables_from_metadata.py
backend/tests/: conftest.py  mocks.py  test_agent_factory_mock.py  test_app_compatibility.py  test_config_imports.py  test_data_integrity.py  test_db_adapter.py  test_engine_cache.py  test_global_exception.py  test_schema_validation.py  test_stream_exception.py  test_tools.py
backend/utils/: __init__.py  agent_factory.py  encryption.py  engine_cache.py  jwt_auth.py  (+3 more)
(+156 files in other folders)
